fixes spacing variable

--- a/app/assets/stylesheets/nfg_ui/network_for_good/admin/nfg_theme/custom/_builder_layout.scss
+++ b/app/assets/stylesheets/nfg_ui/network_for_good/admin/nfg_theme/custom/_builder_layout.scss
@@ -1,5 +1,5 @@
 // Setting a common height for the builder header
-$builder-header-height: ($spacer * .5);
+$builder-header-height: ($spacer * 3);
 
 // Put on the <body> to help with correct scrolling within builder-wrap and builder-options
 .builder-layout {
